--- a/webApi.csproj
+++ b/webApi.csproj
@@ -15,5 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Identity\Services\" />
+    <Folder Include="Pages\Events\uploads\" />
+    <Folder Include="wwwroot\images\events\" />
   </ItemGroup>
 </Project>
