--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "AppSettings":{
+    "UserName": "admin@admin.com",
+    "UserEmail": "johndoe@email.com",
+    "UserPassword": "!A123z",
+    "AdminUserEmail":"rao13@hi.is"
+  }
+} 
