Added an Admin folder to seperate the Admin function

--- a/webApi.csproj
+++ b/webApi.csproj
@@ -23,4 +23,18 @@
     <Folder Include="Areas\Identity\Services\" />
     <Folder Include="wwwroot\images\events\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="Areas\Identity\Pages\Account\Admin\_Layout.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\Identity\Pages\Account\Admin\_ManageNav.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\Identity\Pages\Account\Admin\_StatusMessage.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\Identity\Pages\Account\Admin\_ViewImports.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
 </Project>
