Búinn að gera grunninn að adminn heimasíðunni

--- a/webApi.csproj
+++ b/webApi.csproj
@@ -24,7 +24,7 @@
     <Content Update="Areas\Identity\Pages\Account\Admin\_Layout.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
-    <Content Update="Areas\Identity\Pages\Account\Admin\_ManageNav.cshtml">
+    <Content Update="Areas\Identity\Pages\Account\Admin\_AdminNav.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Areas\Identity\Pages\Account\Admin\_StatusMessage.cshtml">
