--- a/webApi.csproj
+++ b/webApi.csproj
@@ -21,6 +21,9 @@
     <Folder Include="wwwroot\images\events\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Update="Areas\Identity\Pages\Account\Admin\ManageUsers.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Areas\Identity\Pages\Account\Admin\_Layout.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
