--- a/webApi.csproj
+++ b/webApi.csproj
@@ -14,6 +14,7 @@
     <Folder Include="Areas\Identity\Services\" />
     <Folder Include="wwwroot\images\events\" />
     <Folder Include="wwwroot\images\grants\" />
+    <Folder Include="wwwroot\images\votes\" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Areas\Identity\Pages\Account\Admin\Events\Create.cshtml">
