--- a/webApi.csproj
+++ b/webApi.csproj
@@ -15,6 +15,7 @@
     <Folder Include="wwwroot\images\events\" />
     <Folder Include="wwwroot\images\grants\" />
     <Folder Include="wwwroot\images\boardmembers\" />
+    <Folder Include="wwwroot\images\private\" />
     <Folder Include="wwwroot\images\usersPdf\" />
     <Folder Include="wwwroot\images\votes\" />
   </ItemGroup>
