--- a/webApi.csproj
+++ b/webApi.csproj
@@ -4,6 +4,14 @@
     <UserSecretsId>aspnet-WebPWrecover-1234</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Pages\css\footer.css" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Pages\css\footer.css">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.4" />
